cbmc_trunk/cbmc_trunk_windows/src/xmllang/y.output
Terminals unused in grammar

   VERSION
   ENCODING


Grammar

    0 $accept: document $end

    1 document: prolog element misc_seq_opt

    2 prolog: XMLDecl_opt misc_seq_opt

    3 $@1: /* empty */

    4 $@2: /* empty */

    5 XMLDecl_opt: STARTXMLDECL $@1 attribute_seq_opt $@2 ENDPI
    6            | /* empty */

    7 misc_seq_opt: misc_seq_opt misc
    8             | /* empty */

    9 misc: COMMENT
   10     | PI

   11 $@3: /* empty */

   12 $@4: /* empty */

   13 PI: STARTPI NAME $@3 attribute_seq_opt $@4 ENDPI

   14 $@5: /* empty */

   15 element: START $@5 attribute_seq_opt empty_or_content

   16 empty_or_content: SLASH CLOSE

   17 $@6: /* empty */

   18 empty_or_content: CLOSE $@6 content END name_opt CLOSE

   19 content: content DATA
   20        | content misc

   21 $@7: /* empty */

   22 content: content $@7 element
   23        | /* empty */

   24 name_opt: NAME
   25         | /* empty */

   26 attribute_seq_opt: attribute_seq_opt attribute
   27                  | /* empty */

   28 attribute: NAME EQ VALUE


Terminals, with rules where they appear

$end (0) 0
error (256)
STARTXMLDECL (258) 5
VERSION (259)
STARTPI (260) 13
ENDPI (261) 5 13
EQ (262) 28
SLASH (263) 16
CLOSE (264) 16 18
END (265) 18
ENCODING (266)
NAME (267) 13 24 28
VALUE (268) 28
DATA (269) 19
COMMENT (270) 9
START (271) 15


Nonterminals, with rules where they appear

$accept (17)
    on left: 0
document (18)
    on left: 1, on right: 0
prolog (19)
    on left: 2, on right: 1
XMLDecl_opt (20)
    on left: 5 6, on right: 2
$@1 (21)
    on left: 3, on right: 5
$@2 (22)
    on left: 4, on right: 5
misc_seq_opt (23)
    on left: 7 8, on right: 1 2 7
misc (24)
    on left: 9 10, on right: 7 20
PI (25)
    on left: 13, on right: 10
$@3 (26)
    on left: 11, on right: 13
$@4 (27)
    on left: 12, on right: 13
element (28)
    on left: 15, on right: 1 22
$@5 (29)
    on left: 14, on right: 15
empty_or_content (30)
    on left: 16 18, on right: 15
$@6 (31)
    on left: 17, on right: 18
content (32)
    on left: 19 20 22 23, on right: 18 19 20 22
$@7 (33)
    on left: 21, on right: 22
name_opt (34)
    on left: 24 25, on right: 18
attribute_seq_opt (35)
    on left: 26 27, on right: 5 13 15 26
attribute (36)
    on left: 28, on right: 26


state 0

    0 $accept: . document $end

    STARTXMLDECL  shift, and go to state 1

    $default  reduce using rule 6 (XMLDecl_opt)

    document     go to state 2
    prolog       go to state 3
    XMLDecl_opt  go to state 4


state 1

    5 XMLDecl_opt: STARTXMLDECL . $@1 attribute_seq_opt $@2 ENDPI

    $default  reduce using rule 3 ($@1)

    $@1  go to state 5


state 2

    0 $accept: document . $end

    $end  shift, and go to state 6


state 3

    1 document: prolog . element misc_seq_opt

    START  shift, and go to state 7

    element  go to state 8


state 4

    2 prolog: XMLDecl_opt . misc_seq_opt

    $default  reduce using rule 8 (misc_seq_opt)

    misc_seq_opt  go to state 9


state 5

    5 XMLDecl_opt: STARTXMLDECL $@1 . attribute_seq_opt $@2 ENDPI

    $default  reduce using rule 27 (attribute_seq_opt)

    attribute_seq_opt  go to state 10


state 6

    0 $accept: document $end .

    $default  accept


state 7

   15 element: START . $@5 attribute_seq_opt empty_or_content

    $default  reduce using rule 14 ($@5)

    $@5  go to state 11


state 8

    1 document: prolog element . misc_seq_opt

    $default  reduce using rule 8 (misc_seq_opt)

    misc_seq_opt  go to state 12


state 9

    2 prolog: XMLDecl_opt misc_seq_opt .
    7 misc_seq_opt: misc_seq_opt . misc

    STARTPI  shift, and go to state 13
    COMMENT  shift, and go to state 14

    $default  reduce using rule 2 (prolog)

    misc  go to state 15
    PI    go to state 16


state 10

    5 XMLDecl_opt: STARTXMLDECL $@1 attribute_seq_opt . $@2 ENDPI
   26 attribute_seq_opt: attribute_seq_opt . attribute

    NAME  shift, and go to state 17

    $default  reduce using rule 4 ($@2)

    $@2        go to state 18
    attribute  go to state 19


state 11

   15 element: START $@5 . attribute_seq_opt empty_or_content

    $default  reduce using rule 27 (attribute_seq_opt)

    attribute_seq_opt  go to state 20


state 12

    1 document: prolog element misc_seq_opt .
    7 misc_seq_opt: misc_seq_opt . misc

    STARTPI  shift, and go to state 13
    COMMENT  shift, and go to state 14

    $default  reduce using rule 1 (document)

    misc  go to state 15
    PI    go to state 16


state 13

   13 PI: STARTPI . NAME $@3 attribute_seq_opt $@4 ENDPI

    NAME  shift, and go to state 21


state 14

    9 misc: COMMENT .

    $default  reduce using rule 9 (misc)


state 15

    7 misc_seq_opt: misc_seq_opt misc .

    $default  reduce using rule 7 (misc_seq_opt)


state 16

   10 misc: PI .

    $default  reduce using rule 10 (misc)


state 17

   28 attribute: NAME . EQ VALUE

    EQ  shift, and go to state 22


state 18

    5 XMLDecl_opt: STARTXMLDECL $@1 attribute_seq_opt $@2 . ENDPI

    ENDPI  shift, and go to state 23


state 19

   26 attribute_seq_opt: attribute_seq_opt attribute .

    $default  reduce using rule 26 (attribute_seq_opt)


state 20

   15 element: START $@5 attribute_seq_opt . empty_or_content
   26 attribute_seq_opt: attribute_seq_opt . attribute

    SLASH  shift, and go to state 24
    CLOSE  shift, and go to state 25
    NAME   shift, and go to state 17

    empty_or_content  go to state 26
    attribute         go to state 19


state 21

   13 PI: STARTPI NAME . $@3 attribute_seq_opt $@4 ENDPI

    $default  reduce using rule 11 ($@3)

    $@3  go to state 27


state 22

   28 attribute: NAME EQ . VALUE

    VALUE  shift, and go to state 28


state 23

    5 XMLDecl_opt: STARTXMLDECL $@1 attribute_seq_opt $@2 ENDPI .

    $default  reduce using rule 5 (XMLDecl_opt)


state 24

   16 empty_or_content: SLASH . CLOSE

    CLOSE  shift, and go to state 29


state 25

   18 empty_or_content: CLOSE . $@6 content END name_opt CLOSE

    $default  reduce using rule 17 ($@6)

    $@6  go to state 30


state 26

   15 element: START $@5 attribute_seq_opt empty_or_content .

    $default  reduce using rule 15 (element)


state 27

   13 PI: STARTPI NAME $@3 . attribute_seq_opt $@4 ENDPI

    $default  reduce using rule 27 (attribute_seq_opt)

    attribute_seq_opt  go to state 31


state 28

   28 attribute: NAME EQ VALUE .

    $default  reduce using rule 28 (attribute)


state 29

   16 empty_or_content: SLASH CLOSE .

    $default  reduce using rule 16 (empty_or_content)


state 30

   18 empty_or_content: CLOSE $@6 . content END name_opt CLOSE

    $default  reduce using rule 23 (content)

    content  go to state 32


state 31

   13 PI: STARTPI NAME $@3 attribute_seq_opt . $@4 ENDPI
   26 attribute_seq_opt: attribute_seq_opt . attribute

    NAME  shift, and go to state 17

    $default  reduce using rule 12 ($@4)

    $@4        go to state 33
    attribute  go to state 19


state 32

   18 empty_or_content: CLOSE $@6 content . END name_opt CLOSE
   19 content: content . DATA
   20        | content . misc
   22        | content . $@7 element

    STARTPI  shift, and go to state 13
    END      shift, and go to state 34
    DATA     shift, and go to state 35
    COMMENT  shift, and go to state 14

    $default  reduce using rule 21 ($@7)

    misc  go to state 36
    PI    go to state 16
    $@7   go to state 37


state 33

   13 PI: STARTPI NAME $@3 attribute_seq_opt $@4 . ENDPI

    ENDPI  shift, and go to state 38


state 34

   18 empty_or_content: CLOSE $@6 content END . name_opt CLOSE

    NAME  shift, and go to state 39

    $default  reduce using rule 25 (name_opt)

    name_opt  go to state 40


state 35

   19 content: content DATA .

    $default  reduce using rule 19 (content)


state 36

   20 content: content misc .

    $default  reduce using rule 20 (content)


state 37

   22 content: content $@7 . element

    START  shift, and go to state 7

    element  go to state 41


state 38

   13 PI: STARTPI NAME $@3 attribute_seq_opt $@4 ENDPI .

    $default  reduce using rule 13 (PI)


state 39

   24 name_opt: NAME .

    $default  reduce using rule 24 (name_opt)


state 40

   18 empty_or_content: CLOSE $@6 content END name_opt . CLOSE

    CLOSE  shift, and go to state 42


state 41

   22 content: content $@7 element .

    $default  reduce using rule 22 (content)


state 42

   18 empty_or_content: CLOSE $@6 content END name_opt CLOSE .

    $default  reduce using rule 18 (empty_or_content)
